# dr-cbt-code

./: README.md  pyproject.toml  requirements.txt  run.sh
config/: default.yaml  radius020.yaml
docs/: plan_traceability.md
results/: README.md
results/calibration_run/: target_sample_calibration_summary.csv
results/final_run/: comparison_table.csv  raw_topk_metrics.csv  run_manifest.json  summary_pair_metrics.csv  summary_topk_metrics.csv
results/holdout_real_run/: holdout_real_method_comparison_summary.csv
results/matched_ci_run_refresh/: real_matched_ci_summary.csv
results/radius020_final_run/: raw_pair_metrics.csv
results/radius020_matched_ci_run/: real_matched_ci_summary.csv
results/radius020_real_run/: real_method_comparison_summary.csv
results/radius020_shift_stress_run/: raw_shift_stress_metrics.csv  summary_shift_stress_metrics.csv
results/real_run_refresh/: real_method_comparison_summary.csv
results/sensitivity_run/: real_uncertainty_sensitivity_summary.csv
results/sensitivity_run_refresh/: real_uncertainty_sensitivity_summary.csv
results/shift_stress_run/: raw_shift_stress_metrics.csv  summary_shift_stress_metrics.csv
results/smoke_run/: ablation_table.csv  comparison_table.csv  raw_pair_metrics.csv  raw_topk_metrics.csv  (+3 more)
scripts/: __init__.py  generate_tables_figures.py  make_paper_figures.py  run_experiments.py  run_real_data.py  run_real_holdout_validation.py  run_real_matched_ci.py  run_shift_stress_test.py  run_target_sample_calibration.py  run_uncertainty_sensitivity.py
src/: evaluate.py  real_data.py  train.py
(+165 files in other folders)
